--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		
 		<repository>
 		    <id>nexus</id>
-		    <url>http://http://172.31.42.235:8081/repository/maven-releases/</url>
+		    <url>http://172.31.42.235:8081/repository/maven-releases/</url>
 		</repository>
   	</distributionManagement>
 	
